<resources>
    <string name="app_name">Assignment</string>
    <string name="search_movie_or_show">search movie or show</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="episodes">Episodes</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="element_bookmarked_successfully">%1$s bookmarked successfully!</string>
    <string name="synopsis">Synopsis</string>
    <string name="cast_and_crew"><![CDATA[Cast & Crew]]></string>
</resources>