<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.epifi.assignment.model.SearchType" />

        <variable
            name="impl"
            type="com.epifi.assignment.home.HomeBindingImpl" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_abda" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="#383838"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_movie_or_show"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:text="@={impl.searchQuery}"
                    android:textAlignment="center"
                    android:textColor="#646464"
                    android:textSize="16sp"
                    app:fontFamily="@font/gilroy_bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbars="none">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/home"
                        style="@style/SearchTypeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:enabled="@{impl.searchType != null}"
                        android:text="@string/home" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/movies"
                        style="@style/SearchTypeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:enabled="@{impl.searchType != SearchType.movie}"
                        android:text="@string/movies" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/series"
                        style="@style/SearchTypeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:enabled="@{impl.searchType != SearchType.series}"
                        android:text="@string/series" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/episodes"
                        style="@style/SearchTypeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:enabled="@{impl.searchType != SearchType.episode}"
                        android:text="@string/episodes" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </HorizontalScrollView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_element" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>